fixing nav bar toggle on mobile

--- a/src/components/navigation/navigation.less
+++ b/src/components/navigation/navigation.less
@@ -33,7 +33,18 @@
 		font-size: 20px;
 		line-height: 30px;		
 	}
+
+	@media all and (max-width:375px){
+		.header {
+			font-size:17px;
+		}
+	}
+	.navbar-toggle {
+		// display: none;
+	}
 }
+
+
 
 
 // .navigation {
